registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: registry-pvc
          persistentVolumeClaim:
            claimName: registry-pvc
