registry/netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-build-pods
  namespace: registry
spec:
  podSelector:
    matchLabels:
      app: registry
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default       
      podSelector:
        matchLabels:
          app: build-pod                           
    ports:
    - protocol: TCP
      port: 5000
